# herb-vad

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  herb-VAD.md  pyproject.toml
docs/: RELEASE.md  paper_outline.md  plan.md
docs/decisions/: 0001-task1-deviations.md  0002-corpus-acquisition-state.md
docs/findings/: 01_label_reliability.md  02_cognitive_substrate.md  03_vad_crosswalk.md
docs/paper/: herb_vad_en.md  herb_vad_zh.md
scripts/: 01_build_symptom_vocab.py  01_fetch_batman.py  01_fetch_classical.py  01_fetch_etcm.py  01_fetch_herb_db.py  01_fetch_pharmacopoeia.py  01_fetch_pubmed.py  01_fetch_symmap.py  01_fetch_tcm_mkg.py  01_fetch_tcmid.py  01_fetch_tcmsp.py  01_parse_cvaw.py  01_parse_nrc_vad.py  02_harmonize.py  03_reliability.py  04_build_text_repr.py  05_embed_cooc.py  05_embed_lm.py  06_probe.py  07_held_out_probe.py  08_embed_vad.py  09_crosswalk.py  10_crosswalk_hypotheses.py  11_figures.py  12_build_pdfs.py
src/herb_vad/: __init__.py  schemas.py
tests/: test_env.py
tests/fixtures/: batman_mini.tsv  ctext_paragraphs_sample.json  cvaw_mini.csv  etcm_mini.tsv  herb_db_mini.tsv  nrc_vad_mini.tsv  pubmed_efetch_sample.xml  symmap_mini.tsv  tcm_mkg_herbs_mini.tsv  tcm_mkg_props_mini.tsv  tcmid_mini.csv  tcmsp_mini.csv
tests/unit/: test_analysis_figures.py  test_analysis_reliability.py  test_crosswalk_align.py  test_crosswalk_hypotheses.py  test_crosswalk_parallel_pairs.py  test_embedder.py  test_formula_cooc.py  test_harmonize_canonicalize.py  test_harmonize_consensus.py  test_held_out_symptom.py  (+24 more)
(+36 files in other folders)
