[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herb-vad"
version = "0.1.0"
description = "Cognitive cartography of classical TCM herb descriptors via the NLP-VAD methodological protocol"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Herb-VAD contributors" }]
dependencies = [
    "polars>=1.0",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "click>=8.1",
    "loguru>=0.7",
    "tqdm>=4.66",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "gensim>=4.3",
]
viz = [
    "matplotlib>=3.9",
    "altair>=5.3",
]
chem = [
    "rdkit>=2024.3.3",
]
gpu = [
    "torch_geometric>=2.5",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
data = [
    "duckdb>=1.0",
    "dvc>=3.51",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
